compiler/tests/success/risc-v/intrinsic_sll.jazz
export
fn lsl(reg u32 arg0, reg u32 arg1) -> reg u32 {
    reg u32 x;

    // Registers.
    x = #SLL(arg0, arg1);
    [x] = x;

    // Immediates.
    x = #SLLI(arg0, 1);
    [x] = x;

    reg u32 res;
    res = x;
    return res;
}
